--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 <h1><img src="https://i.ibb.co/4ncFK2s1/file-234.jpg">OAH official</h1>
 <nav>
     <div class="nav-links">
-        <div class="nav-item"><a href="about.html" target="_blank">Codes</a></div>
-        <div class="nav-item"><a href="services.html" target="_blank">Services</a></div>
+        <div class="nav-item"><a href="about.html" target="_blank" #about>Codes</a></div>
+        <div class="nav-item"><a href="services.html" target="_blank" #services>Services</a></div>
     </div>
 </nav>
 </header>
